tests/error/struct_errors/constructor_missing_arg.err
Error: Not enough arguments (at $FILE:15:12)
   | 
13 | @guppy(module)
14 | def main() -> None:
15 |     MyStruct()
   |             ^^ Missing argument (expected 1, got 0)

Note: Function signature is `int -> MyStruct`

Guppy compilation failed due to 1 previous error
